--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.7-alpine
 
 RUN apk update && apk --no-cache add libffi-dev \
+                                     bash \
                                      build-base \
                                      postgresql-dev \
                                      python3-dev
@@ -10,7 +11,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app/ app/
 COPY oauth.py .
+COPY docker/entrypoint.sh .
+
 ENV FLASK_APP=oauth.py
 
-ENTRYPOINT ["flask", "run"]
-CMD ["--host", "0.0.0.0"]
+ENTRYPOINT ["/bin/bash", "entrypoint.sh"]
