Fixed migration in docker containers

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,6 +6,8 @@ RUN apk update && apk --no-cache add libffi-dev \
                                      postgresql-dev \
                                      python3-dev
 
+WORKDIR root/
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
@@ -13,6 +15,8 @@ COPY app/ app/
 COPY oauth.py .
 COPY docker/entrypoint.sh .
 
+ENV DB_HOST=identities_db
+ENV DB_NAME=identities
 ENV FLASK_APP=oauth.py
 
 ENTRYPOINT ["/bin/bash", "entrypoint.sh"]
