--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   identities_db:
     image: postgres:11-alpine
     volumes:
-      - $HOME/docker/volumes/postgres:/var/lib/postgresql/data
+      - db_volume:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -13,7 +13,7 @@ services:
   identities_db_client:
     image:  dpage/pgadmin4:latest
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@labengine.com
+      PGADMIN_DEFAULT_EMAIL: admin@labelengine.com
       PGADMIN_DEFAULT_PASSWORD: admin
     ports:
       - 80:80
@@ -28,3 +28,6 @@ services:
       - 5000:5000
     depends_on:
       - identities_db
+
+volumes:
+  db_volume:
